# RustTemplate

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  _config.yml  build.rs  deny.toml  rustfmt.toml  shell.nix
.github/: labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: audit.yml  ci.yml  devskim.yml  greetings.yml  labeler.yml  release.yml  super-linter.yml
docs/: README.md  TEMPLATE.md  Template.md
docs/template/: EXTRAS.md  FEATURES.md  MANUAL.md  REQ.md  START.md  UPDATE_DESC.md  UPDATE_LOGO.md  WORKFLOW.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_target_1.rs
resources/: USEFUL_SITES.md
resources/linux/: CHANGEME.nix
resources/linux/AUR/git/: .SRCINFO  PKGBUILD
resources/linux/AUR/stable/: .SRCINFO  PKGBUILD
resources/linux/EStash.AppDir/: AppRun
resources/linux/desktop/: CHANGEME.desktop
resources/macos/: CHANGEME.rb  make-dmg.sh
resources/macos/CHANGEME.app/Contents/: Info.plist
resources/macos/CHANGEME.app/Contents/Resources/: AppIcon.icns
resources/windows/: License.rtf  main.wxs  windows-installer.iss
scripts/: init_repo.py
scripts/data/: PMAIL  SMAIL
scripts/lib/: init_repo.py  update_desc.py
scripts/repo/: pyproject.toml
scripts/repo/repo/: __init__.py  init_repo.py  update_desc.py  update_logo.py
src/: lib.rs
tests/: integration_test.rs
